src/app/events/event/form/form.component.css
form.normal-form {
  flex: auto;
  margin: 2%;
  overflow: auto;
}
.controls-container {
  width: 100%;
  padding: 5%;
}
.controls-container > * {
  width: 100%;
}
.button-row button {
  margin: 1%;
  position: relative;
}
.add-bottom-padding {
  padding-bottom: 5%;
}
.edit-font-size {
  font-size: 14px;
}
mat-radio-group mat-radio-button {
  margin-left: 5px;
}
.fill-remaining-space {
  flex: 1 1 auto;
}
mat-form-field {
  font-size: 14px;
}
@media screen and (max-width: 767px) {
  mat-checkbox {
    font-size: 9px;
  }
}

